Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -40,14 +40,11 @@
 <a id="code" class="anchor" href="#code" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Code</h3>
 
 <ul>
-<li><a href="https://github.com/scottdet/scottdet.github.io">Project code</a></li>
-<li>Presentation </li>
+<li><a href="https://raw.githubusercontent.com/scottdet/scottdet.github.io/master/DataGen.py">Data Generation</a></li>
+<li><a href="https://raw.githubusercontent.com/scottdet/scottdet.github.io/master/Read.py">Read</a></li>
+<li><a href="https://raw.githubusercontent.com/scottdet/scottdet.github.io/master/EasyAssembly.py">Assembly Algorithm</a></li>
+<li><a href="https://raw.githubusercontent.com/scottdet/scottdet.github.io/master/main.py">Main</a></li>
 </ul>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
 
       <footer class="site-footer">
 
