Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-my-cm124-final-project" class="anchor" href="#welcome-to-my-cm124-final-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my CM124 Final Project</h3>
-
-<p>This project is designed to assemble complete haplotypes from a series of incomplete reads. Humans have two haplotypes, one from each parent. Unfortunately for us, sequencing reads done by machine only contain information regarding one of these haplotypes. Information on both haplotypes is contained within this sequencing read, however. So, by tiling together reads (using a greedy algorithm written in Python) we can reassemble complete haplotypes.</p>
-
-<h3>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h3>
 
-<p>My name is Scott de Taboada and I'm a third year undergraduate student at UCLA studying computational mathematics. As an undergraduate who's fairly new to computer science I decided to take on an easy version of project 2, haplotype assembly. This is one of my first times programming in Python and I look forward to keeping you up to do date with my progress until the completion of this project.</p>
+<p>My name is Scott de Taboada and I'm a third year student at UCLA studying computational mathematics. As an undergraduate who's fairly new to computer science I decided to take on an easy version of project 2, haplotype assembly. This is one of my first times programming in Python and I look forward to keeping you up to do date with my progress until the completion of this project.</p>
+
+<h3>
+<a id="my-cm124-final-project" class="anchor" href="#my-cm124-final-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My CM124 Final Project</h3>
+
+<p>This project is designed to assemble complete haplotypes from a series of incomplete reads. Humans have two haplotypes, one from each parent. Unfortunately for us, sequencing reads done by machine only contain information regarding one of these haplotypes. However, information on both haplotypes is contained within this sequencing read and so by tiling together reads (using a greedy algorithm written in Python) we can reassemble complete haplotypes.</p>
 
 <h3>
 <a id="goals" class="anchor" href="#goals" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Goals</h3>
