--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h3>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h3>
 
-<p>My name is Scott de Taboada and I'm a third year student at UCLA studying computational mathematics. As an undergraduate who's fairly new to computer science I decided to take on an easy version of project 2, haplotype assembly. This is one of my first times programming in Python and I look forward to keeping you up to do date with my progress until the completion of this project.</p>
+<p>My name is Scott de Taboada and I'm a third year student at UCLA studying computational mathematics. As an undergraduate who's fairly new to computer science I decided to take on an easy version of project 2, haplotype assembly. This is one of my first times programming in Python and I look forward to keeping you up to date with my progress until the completion of this project.</p>
 
 <h3>
 <a id="my-cm124-final-project" class="anchor" href="#my-cm124-final-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My CM124 Final Project</h3>
